// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`HistoryRow > (Snapshot) renders a placeholder when artwork is missing 1`] = `
<div>
  <div
    class="border-border bg-background-secondary group grid grid-cols-[auto_auto_1fr_1fr_auto] items-center border-b-(length:--border-width) select-none last:border-b-0"
    data-testid="history-row"
  >
    <div
      class="flex w-10 justify-center"
    />
    <div
      class="flex size-12 min-w-12 items-center justify-center overflow-hidden"
      data-testid="history-row-thumbnail"
    >
      <div
        class="group relative overflow-hidden size-12 min-w-12"
        data-testid="media-artwork"
      >
        <div
          class="bg-background-secondary absolute inset-0 flex items-center justify-center"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-music text-foreground opacity-20"
            fill="none"
            height="16"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="3"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M9 18V5l12-2v13"
            />
            <circle
              cx="6"
              cy="18"
              r="3"
            />
            <circle
              cx="18"
              cy="16"
              r="3"
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      class="truncate px-2"
      data-testid="history-row-artist"
    >
      Radiohead
    </div>
    <div
      class="truncate px-2"
    >
      <div
        class="flex items-center justify-between gap-2"
      >
        <button
          class="min-w-0 flex-1 cursor-pointer truncate text-left hover:underline"
          data-testid="history-row-title"
        >
          Paranoid Android
        </button>
      </div>
    </div>
    <div
      class="w-24 px-2 whitespace-nowrap tabular-nums"
      data-testid="history-row-played-at"
    >
      11:55 AM
    </div>
  </div>
</div>
`;

exports[`HistoryRow > (Snapshot) renders with artwork and all actions 1`] = `
<div>
  <div
    class="border-border bg-background-secondary group grid grid-cols-[auto_auto_1fr_1fr_auto] items-center border-b-(length:--border-width) select-none last:border-b-0"
    data-testid="history-row"
  >
    <div
      class="flex w-10 justify-center"
    >
      <button
        aria-label="Add to favorites"
        class="inline-flex cursor-pointer touch-manipulation items-center rounded-md whitespace-nowrap transition-all duration-100 ease-out outline-none active:scale-95 disabled:cursor-not-allowed disabled:opacity-50 disabled:active:scale-100 motion-reduce:transition-none text-foreground bg-transparent hover:bg-black/5 active:bg-black/10 size-8 justify-center"
        data-headlessui-state=""
        data-testid="history-row-favorite"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-heart transition-colors text-foreground-secondary hover:text-foreground"
          fill="none"
          height="16"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M2 9.5a5.5 5.5 0 0 1 9.591-3.676.56.56 0 0 0 .818 0A5.49 5.49 0 0 1 22 9.5c0 2.29-1.5 4-3 5.5l-5.492 5.313a2 2 0 0 1-3 .019L5 15c-1.5-1.5-3-3.2-3-5.5"
          />
        </svg>
      </button>
    </div>
    <div
      class="flex size-12 min-w-12 items-center justify-center overflow-hidden"
      data-testid="history-row-thumbnail"
    >
      <div
        class="group relative overflow-hidden size-12 min-w-12 cursor-pointer"
        data-testid="media-artwork"
      >
        <img
          alt="Paranoid Android"
          class="absolute inset-0 h-full w-full object-cover"
          src="https://example.com/ok-computer.jpg"
        />
        <div
          aria-hidden="true"
          class="pointer-events-none absolute inset-0 bg-black/0 [@media(hover:hover)_and_(pointer:fine)]:group-focus-within:bg-black/45 [@media(hover:hover)_and_(pointer:fine)]:group-hover:bg-black/45 [@media(hover:none)]:bg-black/35"
        />
        <div
          class="pointer-events-none absolute inset-0 flex items-center justify-center opacity-100 transition-opacity [@media(hover:hover)_and_(pointer:fine)]:invisible [@media(hover:hover)_and_(pointer:fine)]:opacity-0 [@media(hover:hover)_and_(pointer:fine)]:group-hover:visible [@media(hover:hover)_and_(pointer:fine)]:group-hover:opacity-100 [@media(hover:hover)_and_(pointer:fine)]:group-focus-within:visible [@media(hover:hover)_and_(pointer:fine)]:group-focus-within:opacity-100"
        >
          <button
            aria-label="Play"
            class="inline-flex cursor-pointer touch-manipulation items-center whitespace-nowrap transition-all duration-100 ease-out outline-none active:scale-95 disabled:cursor-not-allowed disabled:opacity-50 disabled:active:scale-100 motion-reduce:transition-none bg-transparent hover:bg-black/5 active:bg-black/10 size-8 justify-center pointer-events-auto rounded-full text-white"
            data-headlessui-state=""
            data-testid="media-artwork-play"
            title="Play"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-play translate-x-px fill-current"
              fill="none"
              height="16"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M5 5a2 2 0 0 1 3.008-1.728l11.997 6.998a2 2 0 0 1 .003 3.458l-12 7A2 2 0 0 1 5 19z"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
    <div
      class="truncate px-2"
      data-testid="history-row-artist"
    >
      Radiohead
    </div>
    <div
      class="truncate px-2"
    >
      <div
        class="flex items-center justify-between gap-2"
      >
        <button
          class="min-w-0 flex-1 cursor-pointer truncate text-left hover:underline"
          data-testid="history-row-title"
        >
          Paranoid Android
        </button>
        <button
          aria-label="Add to queue"
          class="inline-flex cursor-pointer touch-manipulation items-center rounded-md whitespace-nowrap duration-100 ease-out outline-none active:scale-95 disabled:cursor-not-allowed disabled:opacity-50 disabled:active:scale-100 motion-reduce:transition-none text-foreground bg-transparent hover:bg-black/5 active:bg-black/10 size-8 justify-center opacity-100 transition-none [@media(hover:hover)_and_(pointer:fine)]:opacity-0 [@media(hover:hover)_and_(pointer:fine)]:group-hover:opacity-100"
          data-headlessui-state=""
          data-testid="history-row-add-to-queue"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-plus"
            fill="none"
            height="16"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5 12h14"
            />
            <path
              d="M12 5v14"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      class="w-24 px-2 whitespace-nowrap tabular-nums"
      data-testid="history-row-played-at"
    >
      11:55 AM
    </div>
  </div>
</div>
`;
